--- a/1.1 NLU Vietnamese Real Estate.md
+++ b/1.1 NLU Vietnamese Real Estate.md
@@ -1,6 +1,7 @@
-## 🧠 Workflow Chức năng 1.1 – NLU (Hiểu ngôn ngữ tự nhiên)
+## 🧠 Workflow Chức năng 1.1 – NLU
 
 ### 🎯 Mục tiêu & I/O
+
 **Mục tiêu:** Nhận câu người dùng → xác định Intent + trích xuất Entities/Slots + ước lượng Confidence.  
 **Input:** Câu người dùng (tiếng Việt, có thể lẫn Anh/viết tắt/emoji).  
 **Output:** `{intent, slots, language, normalized_text, confidence, errors?}`
@@ -10,43 +11,52 @@
 ### 🚦 Luồng runtime (Inference) – từng bước
 
 #### **1. Preprocess**
+
 - Detect language (vi, en, vi+en), chuẩn hoá Unicode (NFC).
 - Lower-case có kiểm soát, tách số/đơn vị ("3 tỷ", "2.5 ty", "3000usd").
 - Bỏ emoji nếu cần.
 - Chuẩn hoá chính tả thường gặp ("q7" → "quận 7", "hn" → "hà nội").
 
 #### **2. Tokenizer & Feature**
+
 - Tokenize theo subword (PhoBERT/ViBERT).
 - Thêm đặc trưng regex/gazetteer (quận/huyện, loại BĐS, đơn vị tiền).
 
 #### **3. Intent Classification**
+
 - Mô hình phân lớp intent (LLM zero-shot/few-shot hoặc fine-tuned transformer nhẹ).
 - Top-k intents + xác suất.  
-  **Ví dụ:** `tim_bds`, `hoi_gia`, `dat_lich_xem`, `tu_van_vay`, `chao_hoi`, `khen_chê`, `khong_hieu`.
+  **Ví dụ:** `chao_hoi`, `tim_bds`, `hoi_gia`, `dat_lich_xem`, `tu_van_vay`, `ket_thuc`, `smalltalk`, `khong_hieu`.
 
 #### **4. Entity/Slot Extraction**
+
 - NER/Slot filling (sequence labeling hoặc LLM extraction) + regex/gazetteer hậu kiểm.
 - **Slots gợi ý cho BĐS:**
   - `loai_bds`, `khu_vuc`, `ngan_sach`, `so_phong`, `dien_tich`, `huong_nha`, `du_an`, `thoi_gian`, `phuong_thuc`.
 
 #### **5. Normalization**
+
 - `ngan_sach`: “<3 tỷ” → `{max: 3e9, currency: VND}`.
 - `khu_vuc`: map alias → mã hành chính chuẩn.
 - `dien_tich`: “70m2” → 70.
 - `huong_nha`: chuẩn hoá về bộ `{Đông, Tây, Nam, Bắc, ĐN, TN, ĐB, TB}`.
 
 #### **6. Confidence & Fallback**
+
 ```
 confidence = w1*P(intent) + w2*avg(P(slot)) - penalties(ambiguous, OOD)
 ```
+
 - ≥ 0.75: chấp nhận.
 - 0.5–0.75: hỏi bổ sung.
 - < 0.5: fallback sang `khong_hieu`.
 
 #### **7. Context Merge**
+
 - Hợp nhất với bộ nhớ ngắn hạn (ví dụ: thừa kế `khu_vuc` từ câu trước).
 
 #### **8. Output Contract**
+
 ```json
 {
   "intent": "tim_bds",
@@ -68,30 +78,36 @@ confidence = w1*P(intent) + w2*avg(P(slot)) - penalties(ambiguous, OOD)
 ### 🏗️ Workflow huấn luyện & vận hành (Offline/Batch)
 
 #### **Định nghĩa Schema NLU**
+
 - **Intents:** `chao_hoi`, `tim_bds`, `hoi_gia`, `dat_lich_xem`, `tu_van_vay`, `ket_thuc`, `smalltalk`, `khong_hieu`.
 - **Slots:** như phần trên.
 
 #### **Thu thập & Gán nhãn**
+
 - Nguồn: log CSKH, FAQ, dữ liệu public, paraphrase.
 - Dụng cụ: Doccano/Label Studio.
 - Mục tiêu: ≥300 câu/intent.
 
 #### **Augmentation**
+
 - Paraphrase tiếng Việt.
 - Thay số/đơn vị/địa danh bằng template + gazetteer.
 
-#### **Huấn luyện**
+#### **Huấn luyện** (Làm sau)
+
 - Intent: fine-tune transformer nhỏ (ViBERT/PhoBERT) hoặc SVM.
 - NER/Slots: BiLSTM-CRF/transformer + post-rule regex.
 - LLM guardrail để phát hiện OOD.
 
 #### **Đánh giá**
+
 - Intent: Accuracy/F1 macro.
 - Slots: F1 entity-level.
 - Robustness: lỗi chính tả, viết tắt.
 - Thiết lập confidence threshold bằng ROC.
 
 #### **Triển khai & Giám sát**
+
 - Đóng gói model → service (REST/gRPC).
 - Caching gazetteer trong RAM.
 - A/B test, logging, active learning.
@@ -101,28 +117,48 @@ confidence = w1*P(intent) + w2*avg(P(slot)) - penalties(ambiguous, OOD)
 ### 🧱 Cấu trúc dữ liệu khuyến nghị
 
 #### **Gazetteer**
+
 ```json
 {
-  "khu_vuc": ["quận 1","quận 7","bình thạnh","thủ đức","nhà bè"],
-  "loai_bds": ["chung cư","căn hộ","nhà phố","đất nền","shophouse"],
-  "huong": ["đông","tây","nam","bắc","đông nam","tây nam","đông bắc","tây bắc"]
+  "khu_vuc": ["quận 1", "quận 7", "bình thạnh", "thủ đức", "nhà bè"],
+  "loai_bds": [
+    "chung cư",
+    "căn hộ",
+    "nhà phố",
+    "đất nền",
+    "shophouse"
+  ],
+  "huong": [
+    "đông",
+    "tây",
+    "nam",
+    "bắc",
+    "đông nam",
+    "tây nam",
+    "đông bắc",
+    "tây bắc"
+  ]
 }
 ```
 
 #### **Entity Schema (JSON Schema)**
+
 ```json
 {
   "type": "object",
   "properties": {
-    "khu_vuc": {"type":"string"},
-    "ngan_sach_min": {"type":"number"},
-    "ngan_sach_max": {"type":"number"},
-    "currency": {"type":"string","enum":["VND","USD"]},
-    "loai_bds": {"type":"string"},
-    "so_phong": {"type":"integer","minimum":0},
-    "dien_tich": {"type":"number","minimum":0},
-    "huong_nha": {"type":"string"},
-    "thoi_gian": {"type":"string","description":"ISO datetime or natural phrase"}
+    "khu_vuc": { "type": "string" },
+    "ngan_sach_min": { "type": "number" },
+    "ngan_sach_max": { "type": "number" },
+    "currency": { "type": "string", "enum": ["VND", "USD"] },
+    "loai_bds": { "type": "string" },
+    "so_phong": { "type": "integer", "minimum": 0 },
+    "dien_tich": { "type": "number", "minimum": 0 },
+    "huong_nha": { "type": "string" },
+    "thoi_gian": {
+      "type": "string",
+      "description": "ISO datetime or natural phrase"
+    }
   },
   "required": []
 }
@@ -131,6 +167,7 @@ confidence = w1*P(intent) + w2*avg(P(slot)) - penalties(ambiguous, OOD)
 ---
 
 ### 🧭 Quy tắc hậu kiểm (Post-rules)
+
 - **Ngân sách:** nếu chỉ nói “3 tỷ” → `ngan_sach_max=3e9`.
 - **Đơn vị tiền:** mặc định VND nếu không có.
 - **Khu vực:** chuẩn hoá theo danh mục hành chính.
@@ -143,6 +180,7 @@ confidence = w1*P(intent) + w2*avg(P(slot)) - penalties(ambiguous, OOD)
 
 **Input:** “Tôi muốn căn 2pn ở q7 tầm dưới 3 tỷ”  
 **Output:**
+
 ```
 intent=tim_bds
 slots={loai_bds:"chung cư", so_phong:2, khu_vuc:"quận 7", ngan_sach_max:3000000000, currency:"VND"}
@@ -150,6 +188,7 @@ slots={loai_bds:"chung cư", so_phong:2, khu_vuc:"quận 7", ngan_sach_max:30000
 
 **Input:** “Xem giúp giá đất nền bình chánh khoảng 1.2 tỷ”  
 **Output:**
+
 ```
 intent=hoi_gia hoặc tim_bds
 slots={loai_bds:"đất nền", khu_vuc:"bình chánh", ngan_sach_max:1200000000}
@@ -157,6 +196,7 @@ slots={loai_bds:"đất nền", khu_vuc:"bình chánh", ngan_sach_max:1200000000
 
 **Input:** “Mai 3 giờ chiều rảnh, đặt lịch xem Sunrise Riverside nhé”  
 **Output:**
+
 ```
 intent=dat_lich_xem
 slots={du_an:"Sunrise Riverside", thoi_gian:"YYYY-MM-DDT15:00:00+07:00"}
@@ -165,6 +205,7 @@ slots={du_an:"Sunrise Riverside", thoi_gian:"YYYY-MM-DDT15:00:00+07:00"}
 ---
 
 ### 🛡️ Xử lý lỗi & câu mơ hồ
+
 - Thiếu slot: “Mình muốn mua nhà ạ” → hỏi bổ sung.
 - Mâu thuẫn: “Q7 dưới 2 tỷ, căn hộ 3PN, 120m²” → gợi ý nới điều kiện.
 - OOD: “Kể chuyện cười đi” → chuyển sang `smalltalk`.
@@ -172,6 +213,7 @@ slots={du_an:"Sunrise Riverside", thoi_gian:"YYYY-MM-DDT15:00:00+07:00"}
 ---
 
 ### 📏 KPI & Chỉ tiêu gợi ý
+
 - Intent F1 ≥ **0.90**.
 - Slot F1 ≥ **0.85**.
 - Latency < **150ms** (CPU) hoặc < **50ms** (GPU).
@@ -180,8 +222,8 @@ slots={du_an:"Sunrise Riverside", thoi_gian:"YYYY-MM-DDT15:00:00+07:00"}
 ---
 
 ### 🧩 Kiến trúc nhẹ (plug-and-play)
+
 - **Service:** `/parse` (FastAPI) → trả `{intent, slots, confidence}`.
 - **Models:** `intent.bin`, `slots.bin`, `rules.yaml`.
 - **Config:** `thresholds.yaml`, `normalizers.py`, `alias.json`.
 - **CI:** Unit test normalizer + script eval F1 tự động.
-
