--- a/1.1 NLU Vietnamese Real Estate.md
+++ b/1.1 NLU Vietnamese Real Estate.md
@@ -2,7 +2,7 @@
 
 ### 🎯 Mục tiêu & I/O
 
-**Mục tiêu:** Nhận câu người dùng → xác định Intent + trích xuất Entities/Slots + ước lượng Confidence.  
+**Mục tiêu:** Nhận câu người dùng → xác định Intent
 **Input:** Câu người dùng (tiếng Việt, có thể lẫn Anh/viết tắt/emoji).  
 **Output:** `{intent, slots, language, normalized_text, confidence, errors?}`
 
@@ -14,7 +14,7 @@
 
 - Detect language (vi, en, vi+en), chuẩn hoá Unicode (NFC).
 - Lower-case có kiểm soát, tách số/đơn vị ("3 tỷ", "2.5 ty", "3000usd").
-- Bỏ emoji nếu cần.
+- Bỏ emoji.
 - Chuẩn hoá chính tả thường gặp ("q7" → "quận 7", "hn" → "hà nội").
 
 #### **2. Tokenizer & Feature**
@@ -24,14 +24,13 @@
 
 #### **3. Intent Classification**
 
-- Mô hình phân lớp intent (LLM zero-shot/few-shot hoặc fine-tuned transformer nhẹ).
+- Mô hình phân lớp intent.
 - Top-k intents + xác suất.  
-  **Ví dụ:** `chao_hoi`, `tim_bds`, `hoi_gia`, `dat_lich_xem`, `tu_van_vay`, `ket_thuc`, `smalltalk`, `khong_hieu`.
+  **Ví dụ:** `tim_bds`, `dat_lich_xem`, `general`, `khong_hieu`, `ket_thuc`.
 
-#### **4. Entity/Slot Extraction**
+#### **4. Payload**
 
-- NER/Slot filling (sequence labeling hoặc LLM extraction) + regex/gazetteer hậu kiểm.
-- **Slots gợi ý cho BĐS:**
+- **Payload gợi ý cho BĐS:**
   - `loai_bds`, `khu_vuc`, `ngan_sach`, `so_phong`, `dien_tich`, `huong_nha`, `du_an`, `thoi_gian`, `phuong_thuc`.
 
 #### **5. Normalization**
@@ -40,16 +39,6 @@
 - `khu_vuc`: map alias → mã hành chính chuẩn.
 - `dien_tich`: “70m2” → 70.
 - `huong_nha`: chuẩn hoá về bộ `{Đông, Tây, Nam, Bắc, ĐN, TN, ĐB, TB}`.
-
-#### **6. Confidence & Fallback**
-
-```
-confidence = w1*P(intent) + w2*avg(P(slot)) - penalties(ambiguous, OOD)
-```
-
-- ≥ 0.75: chấp nhận.
-- 0.5–0.75: hỏi bổ sung.
-- < 0.5: fallback sang `khong_hieu`.
 
 #### **7. Context Merge**
 
@@ -60,107 +49,15 @@ confidence = w1*P(intent) + w2*avg(P(slot)) - penalties(ambiguous, OOD)
 ```json
 {
   "intent": "tim_bds",
-  "slots": {
+  "payload": {
     "khu_vuc": "quận 7",
     "ngan_sach_max": 3000000000,
     "loai_bds": "chung cư",
-    "so_phong": 2
+    "so_phong": 2,
+    "dien_tich": 56m
   },
   "language": "vi",
   "normalized_text": "tìm chung cư 2 phòng ngủ ở quận 7 dưới 3 tỷ",
-  "confidence": 0.82,
-  "missing_slots": []
-}
-```
-
----
-
-### 🏗️ Workflow huấn luyện & vận hành (Offline/Batch)
-
-#### **Định nghĩa Schema NLU**
-
-- **Intents:** `chao_hoi`, `tim_bds`, `hoi_gia`, `dat_lich_xem`, `tu_van_vay`, `ket_thuc`, `smalltalk`, `khong_hieu`.
-- **Slots:** như phần trên.
-
-#### **Thu thập & Gán nhãn**
-
-- Nguồn: log CSKH, FAQ, dữ liệu public, paraphrase.
-- Dụng cụ: Doccano/Label Studio.
-- Mục tiêu: ≥300 câu/intent.
-
-#### **Augmentation**
-
-- Paraphrase tiếng Việt.
-- Thay số/đơn vị/địa danh bằng template + gazetteer.
-
-#### **Huấn luyện** (Làm sau)
-
-- Intent: fine-tune transformer nhỏ (ViBERT/PhoBERT) hoặc SVM.
-- NER/Slots: BiLSTM-CRF/transformer + post-rule regex.
-- LLM guardrail để phát hiện OOD.
-
-#### **Đánh giá**
-
-- Intent: Accuracy/F1 macro.
-- Slots: F1 entity-level.
-- Robustness: lỗi chính tả, viết tắt.
-- Thiết lập confidence threshold bằng ROC.
-
-#### **Triển khai & Giám sát**
-
-- Đóng gói model → service (REST/gRPC).
-- Caching gazetteer trong RAM.
-- A/B test, logging, active learning.
-
----
-
-### 🧱 Cấu trúc dữ liệu khuyến nghị
-
-#### **Gazetteer**
-
-```json
-{
-  "khu_vuc": ["quận 1", "quận 7", "bình thạnh", "thủ đức", "nhà bè"],
-  "loai_bds": [
-    "chung cư",
-    "căn hộ",
-    "nhà phố",
-    "đất nền",
-    "shophouse"
-  ],
-  "huong": [
-    "đông",
-    "tây",
-    "nam",
-    "bắc",
-    "đông nam",
-    "tây nam",
-    "đông bắc",
-    "tây bắc"
-  ]
-}
-```
-
-#### **Entity Schema (JSON Schema)**
-
-```json
-{
-  "type": "object",
-  "properties": {
-    "khu_vuc": { "type": "string" },
-    "ngan_sach_min": { "type": "number" },
-    "ngan_sach_max": { "type": "number" },
-    "currency": { "type": "string", "enum": ["VND", "USD"] },
-    "loai_bds": { "type": "string" },
-    "so_phong": { "type": "integer", "minimum": 0 },
-    "dien_tich": { "type": "number", "minimum": 0 },
-    "huong_nha": { "type": "string" },
-    "thoi_gian": {
-      "type": "string",
-      "description": "ISO datetime or natural phrase"
-    }
-  },
-  "required": []
 }
 ```
 
@@ -183,7 +80,7 @@ confidence = w1*P(intent) + w2*avg(P(slot)) - penalties(ambiguous, OOD)
 
 ```
 intent=tim_bds
-slots={loai_bds:"chung cư", so_phong:2, khu_vuc:"quận 7", ngan_sach_max:3000000000, currency:"VND"}
+payload={loai_bds:"chung cư", so_phong:2, khu_vuc:"quận 7", ngan_sach_max:3000000000, currency:"VND"}
 ```
 
 **Input:** “Xem giúp giá đất nền bình chánh khoảng 1.2 tỷ”  
@@ -211,19 +108,3 @@ slots={du_an:"Sunrise Riverside", thoi_gian:"YYYY-MM-DDT15:00:00+07:00"}
 - OOD: “Kể chuyện cười đi” → chuyển sang `smalltalk`.
 
 ---
-
-### 📏 KPI & Chỉ tiêu gợi ý
-
-- Intent F1 ≥ **0.90**.
-- Slot F1 ≥ **0.85**.
-- Latency < **150ms** (CPU) hoặc < **50ms** (GPU).
-- Coverage alias ≥ **98%**.
-
----
-
-### 🧩 Kiến trúc nhẹ (plug-and-play)
-
-- **Service:** `/parse` (FastAPI) → trả `{intent, slots, confidence}`.
-- **Models:** `intent.bin`, `slots.bin`, `rules.yaml`.
-- **Config:** `thresholds.yaml`, `normalizers.py`, `alias.json`.
-- **CI:** Unit test normalizer + script eval F1 tự động.
